src/pages/tk-products-list/tk-products-list.scss
page-tk-products-list {
    ion-header{
        background: #ffffff !important;
    }
    ion-searchbar{
        .searchbar-input{
            box-shadow: none !important;
           //  box-shadow: 0 0 10px rgba(0,0,0,0.1) !important;
        }
    }
    ion-content{
        background: aliceblue !important;
        .scroll-content{
            padding: 20px 0 !important;
        }
    }
    .tk-product-container{
     padding: 0;
     virtual-scroller{
         width: 100%;
     }
     ion-list{
            .tk-item-wrapper{
                // padding: 10px;
                padding: 5px 25px;
                width: 100%;
            }
            .main-grid{
                height: fit-content;
                background: #ffffff;
                border-radius: 4px;
                box-shadow: 0 0 10px rgba(0,0,0,0.1);
                 ion-row{
                     .product-name{
                        color: #000000;
                     }
                     ion-col{
                        //  font-size: 0.9em;
                         color: grey;
                         span{
                            color: #000000;
                        }
                    }
                }
            }
            .main-grid.highlight{
                border: 1px solid rgba(0, 211, 81, 0.75);
            }
            .competitive-section{
                border-top: 1px solid rgba(0,0,0,0.1);
                margin-top: 10px !important;
                font-size: 0.9em !important;
                padding: 0 5px;
                .title{
                    color: #000000;
                    font-weight: 500;
                    font-size: 1.1em;
                    margin-bottom: 2px;
                }
                ion-row{
                    // border-bottom: 1px solid rgba(0,0,0,0.1);
                    padding: 0px;
                    ion-col{
                        padding-bottom: 0;
                        padding-top: 0;
                    }
                }
            }
            .item-action-wrapper{
                text-align: center;
                margin-top: 10px;
            }
        }
    }
    .alert-wrapper {
        width: 330px !important;
        max-width: 400px !important;
        margin-top: 40px;
    }

    .custom-fab {
        font-size: 2em !important;
        margin-left: 4px !important;
    }
}

.expandable-content{
    //some style here
}
.expandable-content.expanded{
    max-height: 500px !important;
}
.expandable-content.collapsed{
    height: 0 !important;
}

virtual-scroller {
    width: 380px;
    height: 1000px;
}
  

